--- a/docs/source/notebooks/More.ipynb
+++ b/docs/source/notebooks/More.ipynb
@@ -10,6 +10,63 @@
   },
   {
    "cell_type": "markdown",
+   "id": "28343e8d",
+   "metadata": {},
+   "source": [
+    "## Websites"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "46129fc7",
+   "metadata": {},
+   "source": [
+    "### Read the Docs\n",
+    "- add tag: \n",
+    "- nbsphinx-gallery [include section toc on the left]\n",
+    "- nbsphinx-link-gallery [for gallery]\n",
+    "- nbsphinx-thumbnail [for thumbnail]\n",
+    "- https://docs.readthedocs.io/en/stable/guides/jupyter.html#creating-galleries-of-examples-using-notebooks\n",
+    "- https://nbsphinx.readthedocs.io/en/latest/gallery/gallery-with-nested-documents.html\n",
+    "- https://sphinx-gallery.github.io/stable/index.html [could solve the problem]\n",
+    "- https://sphinx-book-theme.readthedocs.io/en/stable/customize/custom-css.html\n",
+    "\n",
+    "```\n",
+    "# requirements.txt\n",
+    "\n",
+    "# conf.py\n",
+    "extensions = [\n",
+    "    #\"myst_nb\", # pip install myst_nb\n",
+    "    \"nbsphinx\", # pip install nbsphinx\n",
+    "    \"myst_parser\", # pip install myst-parser\n",
+    "    \"sphinx_gallery.load_style\",\n",
+    "    'sphinx.ext.autodoc',\n",
+    "    'sphinx.ext.autosummary',\n",
+    "    'sphinx_copybutton',\n",
+    "    'sphinx_panels',\n",
+    "    'sphinx.ext.viewcode',\n",
+    "    # theme\n",
+    "    'sphinx_rtd_size',\n",
+    "    'ipykernel', # for kernels\n",
+    "]\n",
+    "\n",
+    "nbsphinx_kernel_name = 'python'\n",
+    "nbsphinx_execute = 'never' # don't check R code\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e8b68efe",
+   "metadata": {},
+   "source": [
+    "### pkgdown\n",
+    "\n",
+    "### genexcell"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "051cb73e",
    "metadata": {},
    "source": [
