--- a/docs/source/notebooks/Toolbox.ipynb
+++ b/docs/source/notebooks/Toolbox.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c19814b0",
+   "id": "172f12c0",
    "metadata": {},
    "source": [
     "## Best categorization methods\n",
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "486495ea",
+   "id": "83cdcbec",
    "metadata": {},
    "source": [
     "## Tool need to try\n",
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5304dc1c",
+   "id": "083c53a3",
    "metadata": {},
    "source": [
     "## DNA\n",
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9329d30e",
+   "id": "b9c83c24",
    "metadata": {},
    "source": [
     "### Phastcons Conservation"
@@ -52,14 +52,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8f1114cc",
+   "id": "39f4eab0",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "650ebd22",
+   "id": "c9fed1ba",
    "metadata": {},
    "source": [
     "## Epigenetic"
@@ -67,7 +67,50 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c1ef4ee4",
+   "id": "51870c00",
+   "metadata": {},
+   "source": [
+    "### Tools"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "07f0f2e4",
+   "metadata": {},
+   "source": [
+    "#### Cistrome\n",
+    "- http://cistrome.org/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8c2ca44e",
+   "metadata": {},
+   "source": [
+    "#### LISA\n",
+    "- http://lisa.cistrome.org/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9565db83",
+   "metadata": {},
+   "source": [
+    "#### MEME\n",
+    "- https://meme-suite.org/meme/db/motifs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "31cd3bbf",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1f016608",
    "metadata": {},
    "source": [
     "### scATAC-seq"
@@ -75,7 +118,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0d131a49",
+   "id": "ce42c5f3",
    "metadata": {},
    "source": [
     "#### macs call peak\n",
@@ -84,7 +127,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "78ed980b",
+   "id": "2d8019ad",
    "metadata": {},
    "source": [
     "#### Footprint\n",
@@ -94,7 +137,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "99451d4f",
+   "id": "e6cb9610",
    "metadata": {},
    "source": [
     "#### update atac_fragments.tsv.gz\n",
@@ -106,14 +149,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8e22868e",
+   "id": "da467aba",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "8a897c6d",
+   "id": "54a17dac",
    "metadata": {},
    "source": [
     "### Cut&Run"
@@ -122,14 +165,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "45acba33",
+   "id": "f6c89493",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "a5898c09",
+   "id": "70e628be",
    "metadata": {},
    "source": [
     "### epitranscriptomics\n",
@@ -138,7 +181,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "69f6a2f8",
+   "id": "b497cf3e",
    "metadata": {},
    "source": [
     "## RNA"
@@ -146,7 +189,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "df460b8a",
+   "id": "c123bfbb",
    "metadata": {},
    "source": [
     "### bulk RNA-seq"
@@ -155,7 +198,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "492a161f",
+   "id": "c1d3d4c8",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -203,14 +246,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c532ffc9",
+   "id": "1ed222de",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "b3a7ffa4",
+   "id": "c6b976a0",
    "metadata": {},
    "source": [
     "## Protein"
@@ -218,17 +261,25 @@
   },
   {
    "cell_type": "markdown",
-   "id": "348315ab",
+   "id": "d06ae0f8",
    "metadata": {},
    "source": [
-    "### ConSurf\n",
+    "### Tools"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "61a05e28",
+   "metadata": {},
+   "source": [
+    "#### ConSurf\n",
     "- https://consurf.tau.ac.il/consurf_index.php"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8c05628c",
+   "id": "102f863d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -243,10 +294,26 @@
   },
   {
    "cell_type": "markdown",
-   "id": "446e215f",
+   "id": "c8c5d8a7",
    "metadata": {},
    "source": [
-    "### GRN"
+    "### Tools"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c68d73f5",
+   "metadata": {},
+   "source": [
+    "#### MIRA"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b8e07478",
+   "metadata": {},
+   "source": [
+    "#### STREAM"
    ]
   },
   {
@@ -254,7 +321,6 @@
    "id": "87612e7a",
    "metadata": {},
    "source": [
-    "#### eGRN\n",
     "- STREAM-eGRN.pdf\n",
     "- https://www.biorxiv.org/content/biorxiv/early/2022/12/15/2022.12.15.520582.full.pdf?%3Fcollection=\n",
     "- https://github.com/YangLi-Bio/stream_core"
@@ -263,14 +329,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "904e8cf6",
+   "id": "59a21ad7",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "5c5db4a9",
+   "id": "fe868df6",
    "metadata": {},
    "source": [
     "## New data types"
@@ -303,7 +369,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d89a6e74",
+   "id": "7074cda5",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -320,14 +386,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40443641",
+   "id": "de6cb0c2",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "42443555",
+   "id": "21cfafca",
    "metadata": {},
    "source": [
     "## Others"
@@ -336,7 +402,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3b7f8069",
+   "id": "2db501ff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,7 +412,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a2079fb6",
+   "id": "ef969c58",
    "metadata": {},
    "source": [
     "- http://localhost:17435/notebooks/projects/ApcKO_multiomics/4.exclude_WT2.ipynb\n",
@@ -356,153 +422,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "915bd046",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "59ed25a6",
-   "metadata": {},
-   "source": [
-    "## Websites"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e9f66fee",
-   "metadata": {},
-   "source": [
-    "### Read the Docs\n",
-    "- add tag: \n",
-    "- nbsphinx-gallery [include section toc on the left]\n",
-    "- nbsphinx-link-gallery [for gallery]\n",
-    "- nbsphinx-thumbnail [for thumbnail]\n",
-    "- https://docs.readthedocs.io/en/stable/guides/jupyter.html#creating-galleries-of-examples-using-notebooks\n",
-    "- https://nbsphinx.readthedocs.io/en/latest/gallery/gallery-with-nested-documents.html\n",
-    "- https://sphinx-gallery.github.io/stable/index.html [could solve the problem]\n",
-    "- https://sphinx-book-theme.readthedocs.io/en/stable/customize/custom-css.html\n",
-    "\n",
-    "```\n",
-    "# requirements.txt\n",
-    "\n",
-    "# conf.py\n",
-    "extensions = [\n",
-    "    #\"myst_nb\", # pip install myst_nb\n",
-    "    \"nbsphinx\", # pip install nbsphinx\n",
-    "    \"myst_parser\", # pip install myst-parser\n",
-    "    \"sphinx_gallery.load_style\",\n",
-    "    'sphinx.ext.autodoc',\n",
-    "    'sphinx.ext.autosummary',\n",
-    "    'sphinx_copybutton',\n",
-    "    'sphinx_panels',\n",
-    "    'sphinx.ext.viewcode',\n",
-    "    # theme\n",
-    "    'sphinx_rtd_size',\n",
-    "    'ipykernel', # for kernels\n",
-    "]\n",
-    "\n",
-    "nbsphinx_kernel_name = 'python'\n",
-    "nbsphinx_execute = 'never' # don't check R code\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "897d5ccb",
-   "metadata": {},
-   "source": [
-    "### pkgdown"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "3de97257",
-   "metadata": {},
-   "source": [
-    "### genexcell"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "824712ad",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "62572c83",
-   "metadata": {},
-   "source": [
-    "## Theme-based"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "662ab185",
-   "metadata": {},
-   "source": [
-    "### lineage plasticity"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f4f8e195",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ae210607",
-   "metadata": {},
-   "source": [
-    "### MIRA"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "66f97044",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "859b2d27",
-   "metadata": {},
-   "source": [
-    "### Cistrome\n",
-    "- http://cistrome.org/"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "076906f4",
-   "metadata": {},
-   "source": [
-    "### LISA\n",
-    "- http://lisa.cistrome.org/"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ee1ca56c",
-   "metadata": {},
-   "source": [
-    "### MEME\n",
-    "- https://meme-suite.org/meme/db/motifs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8cb4de92",
+   "id": "3448d5a2",
    "metadata": {},
    "outputs": [],
    "source": []
