--- a/docs/source/notebooks/toolbox/theme-based/lineage-tracing.ipynb
+++ b/docs/source/notebooks/toolbox/theme-based/lineage-tracing.ipynb
@@ -2,98 +2,74 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "703f5827",
+   "id": "102433fd",
    "metadata": {},
    "source": [
-    "# Databases"
+    "# lineage tracing\n",
+    "- for our project, we hypothesize the diffed cells many turn back to AbSc, we want mtDNA evidence!"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "789c9521",
+   "id": "7b661bea",
    "metadata": {},
    "source": [
-    "## Big theme-based DBs"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b4e42b7d",
-   "metadata": {},
-   "source": [
-    "### DepMap"
+    "## ref\n",
+    "- Massively parallel single-cell mitochondrial DNA genotyping and chromatin profiling\n",
+    "- Lineage tracing on transcriptional landscapes links state to fate during differentiation"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6753a9cc",
+   "id": "d597a192",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "b3742391",
+   "id": "522e03c4",
    "metadata": {},
    "source": [
-    "### TCGA"
+    "## mgatk\n",
+    "- https://github.com/caleblareau/mgatk/wiki/Installation\n",
+    "- https://github.com/caleblareau/mgatk/wiki"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3cc122f4",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "conda create -n mgatk\n",
+    "conda activate mgatk\n",
+    "pip3 install mgatk\n",
+    "mgatk --version\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "86cbaa04",
+   "metadata": {},
+   "source": [
+    "## snplite"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e3764a70",
+   "id": "79c746a6",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
-   "cell_type": "markdown",
-   "id": "0f30fffc",
-   "metadata": {},
-   "source": [
-    "### CRC"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fba9c9f6",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0b56e561",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f1dc1ee0",
-   "metadata": {},
-   "source": [
-    "## Small DBs"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "1195c7bf",
-   "metadata": {},
-   "source": [
-    "### IMMUcan\n",
-    "- [Meta-Analysis of Human Cancer Single-Cell RNA-Seq Datasets Using the IMMUcan Database](https://doi.org/10.1158/0008-5472.CAN-22-0074)\n",
-    "- https://immucanscdb.vital-it.ch/"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "75cec02a",
+   "id": "31bdcd2f",
    "metadata": {},
    "outputs": [],
    "source": []
