--- a/docs/source/notebooks/Toolbox.ipynb
+++ b/docs/source/notebooks/Toolbox.ipynb
@@ -13,7 +13,7 @@
    "id": "172f12c0",
    "metadata": {},
    "source": [
-    "## Best categorization methods\n",
+    "## Organization of this page\n",
     "- Based on data type (DNA, RNA, ATAC, ST, protein)\n",
     "- Based on purpose (differentiation, plasticity)"
    ]
@@ -390,6 +390,38 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0ef07a44",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b9cc23c1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8101478b",
+   "metadata": {},
+   "source": [
+    "## Tutorial"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4dbc1853",
+   "metadata": {},
+   "source": [
+    "- [Scanpy-tutorial](toolbox/Scanpy-tutorial.ipynb)"
+   ]
   },
   {
    "cell_type": "markdown",
