--- a/docs/source/notebooks/toolbox/Scanpy-tutorial.ipynb
+++ b/docs/source/notebooks/toolbox/Scanpy-tutorial.ipynb
@@ -42,6 +42,24 @@
   },
   {
    "cell_type": "markdown",
+   "id": "729ee07c",
+   "metadata": {},
+   "source": [
+    "### list intersection"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3528303d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rp_genes = [value for value in rp_genes if value in atac_data.uns['distance_to_TSS_genes']]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "53e0d31b",
    "metadata": {},
    "source": [
@@ -300,7 +318,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.15"
   },
   "toc": {
    "base_numbering": 1,
