--- a/docs/source/notebooks/Toolbox.ipynb
+++ b/docs/source/notebooks/Toolbox.ipynb
@@ -417,11 +417,32 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4dbc1853",
+   "id": "9fa92b3c",
    "metadata": {},
    "source": [
-    "- [Scanpy-tutorial](toolbox/Scanpy-tutorial.ipynb)"
+    "### Common tools"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4dbc1853",
+   "metadata": {
+    "tags": [
+     "nbsphinx-link-gallery"
+    ]
+   },
+   "source": [
+    "- [Scanpy-tutorial](toolbox/Scanpy-tutorial.ipynb)\n",
+    "- [MetaCell](MetaCell)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b7d36f10",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -461,6 +482,7 @@
   }
  ],
  "metadata": {
+  "celltoolbar": "Tags",
   "kernelspec": {
    "display_name": "R",
    "language": "R",
