--- a/docs/source/notebooks/Toolbox.ipynb
+++ b/docs/source/notebooks/Toolbox.ipynb
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9fa92b3c",
+   "id": "85d2e462",
    "metadata": {},
    "source": [
     "### Common tools"
@@ -438,11 +438,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b7d36f10",
+   "execution_count": 6,
+   "id": "12726dee",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "0.004747561509943"
+      ],
+      "text/latex": [
+       "0.004747561509943"
+      ],
+      "text/markdown": [
+       "0.004747561509943"
+      ],
+      "text/plain": [
+       "[1] 0.004747562"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "0.7^15"
+   ]
   },
   {
    "cell_type": "markdown",
