--- a/docs/source/notebooks/toolbox/Scanpy-tutorial.ipynb
+++ b/docs/source/notebooks/toolbox/Scanpy-tutorial.ipynb
@@ -10,6 +10,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "aa000570",
+   "metadata": {
+    "tags": [
+     "nbsphinx-thumbnail"
+    ]
+   },
+   "source": [
+    "![](https://github.com/scverse/scanpy/raw/master/docs/_static/img/Scanpy_Logo.svg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "22e1faec",
    "metadata": {},
    "source": [
@@ -303,6 +315,7 @@
   }
  ],
  "metadata": {
+  "celltoolbar": "Tags",
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
