--- a/docs/source/notebooks/Toolbox.ipynb
+++ b/docs/source/notebooks/Toolbox.ipynb
@@ -26,7 +26,8 @@
     "## Tool need to try\n",
     "- Metacell\n",
     "- SEACells\n",
-    "- SCENIC+"
+    "- SCENIC+\n",
+    "- CellOracle"
    ]
   },
   {
