--- a/docs/source/notebooks/toolbox/Scanpy-tutorial.ipynb
+++ b/docs/source/notebooks/toolbox/Scanpy-tutorial.ipynb
@@ -10,14 +10,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa000570",
+   "id": "76675516",
    "metadata": {
     "tags": [
      "nbsphinx-thumbnail"
     ]
    },
    "source": [
-    "![](https://github.com/scverse/scanpy/raw/master/docs/_static/img/Scanpy_Logo.svg)"
+    "![](Scanpy_Logo_RGB.png)"
    ]
   },
   {
