--- a/docs/source/notebooks/Toolbox.ipynb
+++ b/docs/source/notebooks/Toolbox.ipynb
@@ -24,10 +24,24 @@
    "metadata": {},
    "source": [
     "## Tool need to try\n",
-    "- Metacell\n",
+    "- Metacell/SuperCell\n",
     "- SEACells\n",
     "- SCENIC+\n",
-    "- CellOracle"
+    "- CellOracle\n",
+    "- dynamo\n",
+    "- Cicero\n",
+    "- HGC (Hierarchical Graph-based Clustering)\n",
+    "\n",
+    "\n",
+    "- SCENT (https://mp.weixin.qq.com/s/VvxExACrvWYyjClT2ajldw)\n",
+    "- FitDevo (https://mp.weixin.qq.com/s/pFrl54QkV_p-swzYKYY1HA)\n",
+    "\n",
+    "- GSVA\n",
+    "- AddModuleScore -Seurat\n",
+    "- chromVAR\n",
+    "\n",
+    "## Tools tested\n",
+    "- Signac"
    ]
   },
   {
