--- a/docs/source/notebooks/Toolbox.ipynb
+++ b/docs/source/notebooks/Toolbox.ipynb
@@ -312,7 +312,7 @@
    "id": "c8c5d8a7",
    "metadata": {},
    "source": [
-    "### Tools"
+    "### Integration"
    ]
   },
   {
@@ -321,6 +321,14 @@
    "metadata": {},
    "source": [
     "#### MIRA"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ac87cc61",
+   "metadata": {},
+   "source": [
+    "## GRN"
    ]
   },
   {
@@ -339,6 +347,22 @@
     "- STREAM-eGRN.pdf\n",
     "- https://www.biorxiv.org/content/biorxiv/early/2022/12/15/2022.12.15.520582.full.pdf?%3Fcollection=\n",
     "- https://github.com/YangLi-Bio/stream_core"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e26da3ce",
+   "metadata": {},
+   "source": [
+    "### SCENIC+\n",
+    "- https://scenicplus.readthedocs.io/en/latest/\n",
+    "- `conda install -c bioconda macs2` # pip install has error\n",
+    "\n",
+    "```\n",
+    "git clone https://github.com/aertslab/scenicplus\n",
+    "cd scenicplus\n",
+    "pip install .\n",
+    "```"
    ]
   },
   {
@@ -518,7 +542,6 @@
   }
  ],
  "metadata": {
-  "celltoolbar": "Tags",
   "kernelspec": {
    "display_name": "R",
    "language": "R",
