--- a/docs/source/notebooks/Toolbox.ipynb
+++ b/docs/source/notebooks/Toolbox.ipynb
@@ -533,9 +533,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "034717d8",
+   "metadata": {},
+   "source": [
+    "## Tutorials\n",
+    "- https://github.com/crazyhottommy/ChIP-seq-analysis"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3448d5a2",
+   "id": "a3ec37ba",
    "metadata": {},
    "outputs": [],
    "source": []
