--- a/docs/source/notebooks/Datasets.ipynb
+++ b/docs/source/notebooks/Datasets.ipynb
@@ -29,7 +29,9 @@
    "id": "18ba28a9",
    "metadata": {},
    "source": [
-    "### Sox9"
+    "### Sox9\n",
+    "- An Enhancer-Driven Stem Cell–Like Program Mediated by SOX9 Blocks Intestinal Differentiation in Colorectal Cancer Liang, Xiaoyan et al. Gastroenterology, Volume 162, Issue 1, 209 - 222 https://www.gastrojournal.org/article/S0016-5085(21)03547-2/fulltext\n",
+    "- SOX9 over expression RNA-seq and ATAC-seq"
    ]
   },
   {
@@ -45,7 +47,7 @@
    "id": "e50f3142",
    "metadata": {},
    "source": [
-    "## Individual datasets"
+    "## Big datasets"
    ]
   },
   {
@@ -54,20 +56,22 @@
    "metadata": {},
    "source": [
     "### CRC ST\n",
-    "- 2023_Kerstin_Hahn_CRC_CMS_ST"
+    "- 2023_Kerstin_Hahn_CRC_CMS_ST\n",
+    "\n",
+    "* [2023_Kerstin_Hahn_CRC_CMS_ST](datasets/2023_Kerstin_Hahn_CRC_CMS_ST.ipynb)\n",
+    "* [test](datasets/2023_Kerstin_Hahn_CRC_CMS_ST.ipynb)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "fd690038",
-   "metadata": {
-    "tags": [
-     "nbsphinx-link-gallery"
-    ]
-   },
+   "id": "4c7fb3b5",
+   "metadata": {},
    "source": [
-    "* [2023_Kerstin_Hahn_CRC_CMS_ST](datasets/2023_Kerstin_Hahn_CRC_CMS_ST.ipynb)\n",
-    "* [test](datasets/2023_Kerstin_Hahn_CRC_CMS_ST.ipynb)"
+    "### HTAN Stanford Atlas CRC\n",
+    "- Becker, W.R., Nevins, S.A., Chen, D.C. et al. Single-cell analyses define a continuum of cell state and composition changes in the malignant transformation of polyps to colorectal cancer. Nat Genet 54, 985–995 (2022). https://doi.org/10.1038/s41588-022-01088-x\n",
+    "- dataset\n",
+    "\n",
+    "- Rozenblatt-Rosen O, Regev A, Oberdoerffer P, et al. The Human Tumor Atlas Network: Charting Tumor Transitions across Space and Time at Single-Cell Resolution. Cell. 2020;181(2):236-249. https://doi.org/10.1016/j.cell.2020.03.053"
    ]
   },
   {
@@ -145,7 +149,6 @@
   }
  ],
  "metadata": {
-  "celltoolbar": "Tags",
   "kernelspec": {
    "display_name": "R 4.1",
    "language": "R",
