--- a/docs/source/notebooks/Toolbox.ipynb
+++ b/docs/source/notebooks/Toolbox.ipynb
@@ -301,6 +301,25 @@
   },
   {
    "cell_type": "markdown",
+   "id": "53e8d82e",
+   "metadata": {},
+   "source": [
+    "## PPI\n",
+    "- Bryant, P., Pozzati, G. & Elofsson, A. Improved prediction of protein-protein interactions using AlphaFold2. Nat Commun 13, 1265 (2022). https://doi.org/10.1038/s41467-022-28865-w\n",
+    "- Sun, T., Zhou, B., Lai, L. et al. Sequence-based prediction of protein protein interaction using a deep-learning algorithm. BMC Bioinformatics 18, 277 (2017). https://doi.org/10.1186/s12859-017-1700-2\n",
+    "- "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f7eb6754",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "id": "5b3b4ecb",
    "metadata": {},
    "source": [
@@ -354,7 +373,7 @@
    "id": "e26da3ce",
    "metadata": {},
    "source": [
-    "### SCENIC+\n",
+    "#### SCENIC+\n",
     "- https://scenicplus.readthedocs.io/en/latest/\n",
     "- `conda install -c bioconda macs2` # pip install has error\n",
     "\n",
@@ -363,6 +382,17 @@
     "cd scenicplus\n",
     "pip install .\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "611d7ad7",
+   "metadata": {},
+   "source": [
+    "#### cistrome toolbox\n",
+    "- http://cistrome.org/BETA/\n",
+    "- https://bioconductor.org/packages/devel/bioc/html/FindIT2.html\n",
+    "- "
    ]
   },
   {
@@ -472,7 +502,7 @@
    },
    "source": [
     "- [Scanpy-tutorial](toolbox/Scanpy-tutorial.ipynb)\n",
-    "- [MetaCell](MetaCell)"
+    "- [MetaCell](MetaCell) hdWGCNA tutorial"
    ]
   },
   {
@@ -537,8 +567,11 @@
    "id": "034717d8",
    "metadata": {},
    "source": [
-    "## Tutorials\n",
-    "- https://github.com/crazyhottommy/ChIP-seq-analysis"
+    "## Pipelines\n",
+    "- https://github.com/crazyhottommy/ChIP-seq-analysis\n",
+    "- Cut&Run\n",
+    "- RNA-seq\n",
+    "- ATAC-seq"
    ]
   },
   {
