--- a/docs/source/notebooks/Toolbox.ipynb
+++ b/docs/source/notebooks/Toolbox.ipynb
@@ -268,10 +268,44 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8cd14ba3",
+   "metadata": {},
+   "source": [
+    "### Tools"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "44a37748",
+   "metadata": {},
+   "source": [
+    "#### gene signature scoring\n",
+    "- non-redundant gene signature (estimate key functions of cells, take hub terms)\n",
+    "- annotation of signature\n",
+    "- topics and modules are important signatures (how many topics in human or mouse?)\n",
+    "- https://github.com/carmonalab/UCell"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "17819c3f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "id": "c6b976a0",
    "metadata": {},
    "source": [
-    "## Protein"
+    "## Protein\n",
+    "\n",
+    "courses:\n",
+    "- https://www.khanacademy.org/science/biology/macromolecules/proteins-and-amino-acids/a/orders-of-protein-structure\n",
+    "\n",
+    "cryo-EM:\n",
+    "- [蛋白质结构生物学服务（冷冻电镜）](https://www.novopro.cn/service/cryoem/)"
    ]
   },
   {
@@ -280,6 +314,27 @@
    "metadata": {},
    "source": [
     "### Tools"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b6bafb19",
+   "metadata": {},
+   "source": [
+    "#### AlphaFold2\n",
+    "- https://alphafold.ebi.ac.uk/\n",
+    "\n",
+    "#### RoseTTAFold\n",
+    "- https://github.com/RosettaCommons/RoseTTAFold\n",
+    "\n",
+    "#### DMPfold2\n",
+    "- https://github.com/psipred/DMPfold2\n",
+    "\n",
+    "#### EVcouplings\n",
+    "- https://github.com/debbiemarkslab/EVcouplings\n",
+    "\n",
+    "#### FoldDock\n",
+    "- https://gitlab.com/ElofssonLab/FoldDock\n"
    ]
   },
   {
@@ -301,19 +356,21 @@
   },
   {
    "cell_type": "markdown",
-   "id": "53e8d82e",
+   "id": "6ba27529",
    "metadata": {},
    "source": [
     "## PPI\n",
     "- Bryant, P., Pozzati, G. & Elofsson, A. Improved prediction of protein-protein interactions using AlphaFold2. Nat Commun 13, 1265 (2022). https://doi.org/10.1038/s41467-022-28865-w\n",
     "- Sun, T., Zhou, B., Lai, L. et al. Sequence-based prediction of protein protein interaction using a deep-learning algorithm. BMC Bioinformatics 18, 277 (2017). https://doi.org/10.1186/s12859-017-1700-2\n",
+    "- Abbasi, W.A., Yaseen, A., Hassan, F.U. et al. ISLAND: in-silico proteins binding affinity prediction using sequence information. BioData Mining 13, 20 (2020). https://doi.org/10.1186/s13040-020-00231-w\n",
+    "- Li X, Yang L, Zhang X, Jiao X. Prediction of Protein-Protein Interactions Based on Domain. Comput Math Methods Med. 2019 Aug 21;2019:5238406. https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6720845/\n",
     "- "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f7eb6754",
+   "id": "f0c6ee37",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -386,7 +443,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "611d7ad7",
+   "id": "1e8ea5d8",
    "metadata": {},
    "source": [
     "#### cistrome toolbox\n",
@@ -448,8 +505,18 @@
    "id": "d071f7de",
    "metadata": {},
    "source": [
-    "### Drug screening\n",
+    "## Drug screening\n",
     "- https://virtual-flow.org/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3933f222",
+   "metadata": {},
+   "source": [
+    "### virtual screening\n",
+    "- Beroza, P., Crawford, J.J., Ganichkin, O. et al. Chemical space docking enables large-scale structure-based virtual screening to discover ROCK1 kinase inhibitors. Nat Commun 13, 6447 (2022). https://doi.org/10.1038/s41467-022-33981-8\n",
+    "- https://mp.weixin.qq.com/s/wl67tifjAEWhNeRKM47IyQ"
    ]
   },
   {
