--- a/docs/source/notebooks/Toolbox.ipynb
+++ b/docs/source/notebooks/Toolbox.ipynb
@@ -360,6 +360,14 @@
    "metadata": {},
    "source": [
     "## PPI\n",
+    "\n",
+    "reviews:\n",
+    "- Protein–DNA/RNA Interactions: An Overview of Investigation Methods in the -Omics Era Flora Cozzolino, Ilaria Iacobucci, Vittoria Monaco, and Maria Monti Journal of Proteome Research 2021 20 (6), 3018-3030 https://doi.org/10.1021/acs.jproteome.1c00074\n",
+    "- Göös, H., Kinnunen, M., Salokas, K. et al. Human transcription factor protein interaction networks. Nat Commun 13, 766 (2022). https://doi.org/10.1038/s41467-022-28341-5\n",
+    "- Unraveling transcription regulatory networks by protein–DNA and protein–protein interaction mapping https://genome.cshlp.org/content/16/12/1445.full.html\n",
+    "- \n",
+    "\n",
+    "in silico tools:\n",
     "- Bryant, P., Pozzati, G. & Elofsson, A. Improved prediction of protein-protein interactions using AlphaFold2. Nat Commun 13, 1265 (2022). https://doi.org/10.1038/s41467-022-28865-w\n",
     "- Sun, T., Zhou, B., Lai, L. et al. Sequence-based prediction of protein protein interaction using a deep-learning algorithm. BMC Bioinformatics 18, 277 (2017). https://doi.org/10.1186/s12859-017-1700-2\n",
     "- Abbasi, W.A., Yaseen, A., Hassan, F.U. et al. ISLAND: in-silico proteins binding affinity prediction using sequence information. BioData Mining 13, 20 (2020). https://doi.org/10.1186/s13040-020-00231-w\n",
