--- a/docs/source/notebooks/Datasets.ipynb
+++ b/docs/source/notebooks/Datasets.ipynb
@@ -75,12 +75,29 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "403296a6",
+   "cell_type": "markdown",
+   "id": "8988975d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "spatial + single-cell\n",
+    "- Integrative single cell and spatial transcriptomics of colorectal cancer reveals multicellular functional units that support tumor progression。 Aviv Regev bioRxiv 2022.10.02.508492; doi: https://doi.org/10.1101/2022.10.02.508492\n",
+    "\n",
+    "spatial\n",
+    "- Spatially organized multicellular immune hubs in human colorectal cancer. Pelka, Karin et al. Cell, Volume 184, Issue 18, 4734 - 4752.e20\n",
+    "\n",
+    "polyps to colorectal cancer\n",
+    "- Becker, W.R., Nevins, S.A., Chen, D.C. et al. Single-cell analyses define a continuum of cell state and composition changes in the malignant transformation of polyps to colorectal cancer. Nat Genet 54, 985–995 (2022). https://doi.org/10.1038/s41588-022-01088-x\n",
+    "\n",
+    "primary and metastatic colorectal cancer tumors\n",
+    "- Wang, R., Li, J., Zhou, X. et al. Single-cell genomic and transcriptomic landscapes of primary and metastatic colorectal cancer tumors. Genome Med 14, 93 (2022). https://doi.org/10.1186/s13073-022-01093-z\n",
+    "\n",
+    "immune CRC\n",
+    "- Immune phenotypic linkage between colorectal cancer and liver metastasis\n",
+    "\n",
+    "Single-cell and bulk CMS\n",
+    "- Joanito, I., Wirapati, P., Zhao, N. et al. Single-cell and bulk transcriptome sequencing identifies two epithelial tumor cell states and refines the consensus molecular classification of colorectal cancer. Nat Genet 54, 963–975 (2022). https://doi.org/10.1038/s41588-022-01100-4\n",
+    "- \n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -131,6 +148,36 @@
     "- Kim, MS., Pinto, S., Getnet, D. et al. A draft map of the human proteome. Nature 509, 575–581 (2014). https://doi.org/10.1038/nature13302\n",
     "- http://www.humanproteomemap.org/"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "63984d0a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0082fd36",
+   "metadata": {},
+   "source": [
+    "#### Genomics of Drug Sensitivity in Cancer\n",
+    "- https://www.cancerrxgene.org/\n",
+    "- \n",
+    "\n",
+    "#### Cancer Cell Line Encyclopedia (CCLE)\n",
+    "- https://sites.broadinstitute.org/ccle/\n",
+    "- "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "49265099",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
