--- a/docs/source/notebooks/Toolbox.ipynb
+++ b/docs/source/notebooks/Toolbox.ipynb
@@ -528,12 +528,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "de6cb0c2",
+   "cell_type": "markdown",
+   "id": "acd60064",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Drug response\n",
+    "- https://github.com/OSU-BMBL/scDEAL\n",
+    "- Chen, J., Wang, X., Ma, A. et al. Deep transfer learning of cancer drug responses by integrating bulk and single-cell RNA-seq data. Nat Commun 13, 6494 (2022). https://doi.org/10.1038/s41467-022-34277-7"
+   ]
   },
   {
    "cell_type": "code",
