--- a/docs/source/notebooks/Toolbox.ipynb
+++ b/docs/source/notebooks/Toolbox.ipynb
@@ -470,6 +470,46 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f4f28f17",
+   "metadata": {},
+   "source": [
+    "## genetic lineage\n",
+    "\n",
+    "### Example\n",
+    "- reconstruct lineage tree by somatic mutation in cancer\n",
+    "- [Reconstructing the Lineage Histories and Differentiation Trajectories of Individual Cancer Cells in Myeloproliferative Neoplasms](https://www.sciencedirect.com/science/article/pii/S1934590921000515)\n",
+    "- [Reconstructing mutational lineages in breast cancer by multi-patient-targeted single-cell DNA sequencing](https://www.sciencedirect.com/science/article/pii/S2666979X22001689)\n",
+    "- [A practical guide to cancer subclonal reconstruction from DNA sequencing](https://www.nature.com/articles/s41592-020-01013-2)\n",
+    "- [Somatic Mutations Reveal Lineage Relationships and Age-Related Mutagenesis in Human Hematopoiesis](https://www.sciencedirect.com/science/article/pii/S2211124718317601?via%3Dihub)\n",
+    "\n",
+    "### Tools\n",
+    "- [Fast and scalable inference of multi-sample cancer lineages](https://genomebiology.biomedcentral.com/articles/10.1186/s13059-015-0647-8#Abs1)\n",
+    "\n",
+    "### Cancer evolution\n",
+    "- [Spatial biology of cancer evolution](https://www.nature.com/articles/s41576-022-00553-x)\n",
+    "- [Cancer evolution: Darwin and beyond](https://www.embopress.org/doi/full/10.15252/embj.2021108389)\n",
+    "- [How cancer shapes evolution, and how evolution shapes cancer](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3660034/)\n",
+    "- "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "94d530ad",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b36d5e8a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "id": "fe868df6",
    "metadata": {},
    "source": [
