--- a/docs/source/notebooks/theme-based/lineage-plasticity-overview.ipynb
+++ b/docs/source/notebooks/theme-based/lineage-plasticity-overview.ipynb
@@ -128,6 +128,34 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "c4a6f10e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4904e299",
+   "metadata": {},
+   "source": [
+    "## References\n",
+    "\n",
+    "regulator of lineage plasticity in cancer\n",
+    "- [Lineage Plasticity in Cancer Progression and Treatment](https://www.annualreviews.org/doi/10.1146/annurev-cancerbio-030617-050224)\n",
+    "- [Lineage Plasticity in Cancer: The Tale of a Skin-Walker](https://doi.org/10.3390%2Fcancers13143602)\n",
+    "- [Lineage plasticity in cancer: a shared pathway of therapeutic resistance](https://doi.org/10.1038%2Fs41571-020-0340-z)\n",
+    "\n",
+    "therapeutic resistance in CRC\n",
+    "- [Drug resistance and new therapies in colorectal cancer](https://doi.org/10.3748%2Fwjg.v24.i34.3834)\n",
+    "- [Pharmacologic resistance in colorectal cancer: a review](https://doi.org/10.1177%2F1758834015614530)\n",
+    "\n",
+    "reviews\n",
+    "- [Impact of Lineage Plasticity to and from a Neuroendocrine Phenotype on Progression and Response in Prostate and Lung Cancers](https://doi.org/10.1016/j.molcel.2020.10.033)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "54a18ee2",
    "metadata": {},
    "outputs": [],
