--- a/docs/source/notebooks/Toolbox.ipynb
+++ b/docs/source/notebooks/Toolbox.ipynb
@@ -653,6 +653,25 @@
   },
   {
    "cell_type": "markdown",
+   "id": "25d5c268",
+   "metadata": {},
+   "source": [
+    "## Advanced tools\n",
+    "\n",
+    "protein degradation system\n",
+    "- Targeted Protein Acetylation in Cells Using Heterobifunctional Molecules"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "78ff9244",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "id": "21cfafca",
    "metadata": {},
    "source": [
