--- a/docs/source/notebooks/Toolbox.ipynb
+++ b/docs/source/notebooks/Toolbox.ipynb
@@ -211,12 +211,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c1d3d4c8",
+   "cell_type": "markdown",
+   "id": "e76f52eb",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#### DESeq2\n",
+    "- [Time course analysis with DESeq2](https://hbctraining.github.io/DGE_workshop_salmon_online/lessons/08b_time_course_analyses.html)\n",
+    "- [DEseq2 time-series design](https://support.bioconductor.org/p/62684/)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -653,7 +655,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "25d5c268",
+   "id": "1f324b4d",
    "metadata": {},
    "source": [
     "## Advanced tools\n",
@@ -665,7 +667,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78ff9244",
+   "id": "a78b9235",
    "metadata": {},
    "outputs": [],
    "source": []
